--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'com.android.library' version '7.1.3' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
     id 'androidx.navigation.safeargs' version '2.4.2' apply false
+    id 'com.google.dagger.hilt.android' version '2.41' apply false
+
 }
 
 task clean(type: Delete) {
