--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.ilkeruzer.rapsodotask"
+        applicationId "com.ilkeruzer.motionApp"
         minSdk 21
         targetSdk 31
         versionCode 1
